feat/add ui kit button and input

--- a/src/shared/components/ui/Text/ui/Title/Title.module.scss
+++ b/src/shared/components/ui/Text/ui/Title/Title.module.scss
@@ -1,37 +1,37 @@
 .title {
-  font-family: "IBM Plex Sans";
-  color: rgb(0, 0, 0);
-  font-weight: 700;
+	font-family: 'IBM Plex Sans';
+	color: rgb(0, 0, 0);
+	font-weight: 700;
 }
 
 .xl-36 {
-  font-size: 36px;
-  font-weight: 800;
+	font-size: 36px;
+	font-weight: 800;
 }
 
 .lg-32 {
-  font-size: 32px;
-  font-weight: 800;
+	font-size: 32px;
+	font-weight: 800;
 }
 
 .md-28 {
-  font-size: 28px;
+	font-size: 28px;
 }
 
 .md-20 {
-  font-size: 20px;
-  font-weight: 800;
+	font-size: 20px;
+	font-weight: 800;
 }
 
 .sm-18 {
-  font-size: 18px;
+	font-size: 18px;
 }
 
 .sm-16 {
-  font-size: 16px;
+	font-size: 16px;
 }
 
 .sm-14 {
-  font-size: 14px;
-  font-weight: 600;
+	font-size: 14px;
+	font-weight: 600;
 }
