--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,6 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
+
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	// outline: 1px solid red;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  // outline: 1px solid red;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
 }
