--- a/src/modules/product-of-the-day/ui/ProductOfTheDay.module.scss
+++ b/src/modules/product-of-the-day/ui/ProductOfTheDay.module.scss
@@ -1,36 +1,43 @@
 .container {
-	max-width: 1252px;
-	width: 100%;
-	margin: 0 auto;
-	padding: 0 20px;
-	display: flex;
-	gap: 12px;
+  max-width: 1252px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  gap: 22px;
 
-	.link {
-		max-width: 232px;
-		width: 100%;
-		a {
-			padding: 20px 0;
-			border-bottom: 1px solid rgb(210, 210, 209);
-			cursor: pointer;
-		}
-	}
+  .link {
+    max-width: 232px;
+    width: 100%;
+    a {
+      padding: 20px 0;
+      border-bottom: 1px solid rgb(210, 210, 209);
+      cursor: pointer;
+    }
+  }
 
-	.product {
-		width: 300px;
-		// width: 100%;
-		height: 455px;
-		border-radius: 10px;
-		border: 0.5px solid rgb(210, 210, 209);
-	}
+  .product {
+    p {
+      padding-bottom: 10px;
+    }
+  }
 
-	@media (max-width: 768px) {
-		max-width: 350px;
-		width: 100%;
-		display: grid;
-		gap: 0;
-		ul {
-			display: none;
-		}
-	}
+  @media (max-width: 768px) {
+    max-width: 350px;
+    width: 100%;
+    display: grid;
+    gap: 0;
+
+    .product {
+      padding-top: 30px;
+    }
+
+    .img {
+      // height: 300px;
+      padding: -100px 0;
+      img {
+        // padding-top: -900px;
+      }
+    }
+  }
 }
